@@ -230,6 +230,9 @@ update: python-env
 	. ${PYTHON_ENV}/bin/activate && python ${ES_BEATS}/libbeat/scripts/generate_template.py $(PWD) ${BEATNAME} ${ES_BEATS}
 	. ${PYTHON_ENV}/bin/activate && python ${ES_BEATS}/libbeat/scripts/generate_template.py --es2x $(PWD) ${BEATNAME} ${ES_BEATS}
 
+	# Update docs version
+	cp ${ES_BEATS}/libbeat/docs/version.asciidoc docs/version.asciidoc
+
 # Builds the documents for the beat
 .PHONY: docs
 docs:
