@@ -1,8 +1,11 @@
 = Metricbeat Reference
-:libbeat: http://www.elastic.co/guide/en/beats/libbeat/master
-:filebeat: http://www.elastic.co/guide/en/beats/filebeat/master
-:elasticsearch: https://www.elastic.co/guide/en/elasticsearch/reference/master/
-:version: 5.0.0-alpha3
+
+include::./version.asciidoc[]
+
+:libbeat: http://www.elastic.co/guide/en/beats/libbeat/{doc-branch}
+:filebeat: http://www.elastic.co/guide/en/beats/filebeat/{doc-branch}
+:elasticsearch: https://www.elastic.co/guide/en/elasticsearch/reference/{doc-branch}/
+:version: {stack-version}
 :beatname_lc: metricbeat
 :beatname_uc: Metricbeat
 :security: X-Pack Security
